# scroll_page

./: .gitignore  CLAUDE.md  README.md  config.py  main.py  package.json  pyproject.toml  requirements.txt
core/: __init__.py  camera.py  eye_tracker.py  gaze_state.py  scroll_controller.py
docs/superpowers/plans/: 2026-03-26-gaze-estimation-improved.md  2026-03-26-head-pose-scrolling.md
docs/superpowers/specs/: 2026-03-25-eye-scroll-design.md  2026-03-26-gaze-estimation-design.md  2026-03-26-head-pose-scrolling-design.md  2026-03-26-tauri2-migration-design.md  2026-03-26-up-scroll-design.md
python/: calibration.json  config.py  main.py  simple_main.py
python/adapters/: __init__.py  calibration_osascript.py  calibration_pyside6.py  calibration_window.py  mac_flash.py  mac_scroll.py  win_scroll.py
python/core/: eye_tracker.py  gaze_state.py  head_state.py  head_tracker.py  scroll_controller.py
python/tests/: test_config.py  test_gaze_state.py  test_head_state.py  test_head_tracker.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/web/: index.html  main.js  package.json  style.css  vite.config.js
tests/: test_config.py  test_gaze_state.py
ui/: __init__.py
utils/: __init__.py  calibration.py  permissions.py
