[project]
name = "headscroll"
version = "0.1.0"
description = "HeadScroll - macOS 免手滚动应用，通过头部姿态控制页面滚动"
requires-python = ">=3.11"
dependencies = [
    "mediapipe>=0.10.0",
    "opencv-python>=4.8.0",
    "pyobjc-framework-Quartz>=10.0",
    "pyobjc-framework-Cocoa>=10.0",
    "rumps>=0.4.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
headscroll = "main:main"
